examples/errors/13_duplicate_field/definitions.tmd
group Root {}

element Window -> Root {
    width: u32,
}

expression Size {
    x: u32,
    y: u32,
}